data/derived/sp14/progs/unify/prog2067.ml.out
Characters 11-12:
  let q = (y x);;
             ^
Error: This expression has type int -> int
       but an expression was expected of type int
